# lesson-plan-browser

./: .env.example  .gitignore  .pre-commit-config.yaml  ACTION_REQUIRED.md  ANALYSIS_DETAILED_AND_LESSON_MODE.md  ANALYSIS_SECOND_VERSION.md  ANALYSIS_TABLE_WIDTH_ISSUE.md  ANALYTICS_WORKFLOW_IMPROVEMENTS.md  ANDROID_BUNDLE_APPROACH.md  ANDROID_DEBUG_NOTES.md  ANDROID_PYTHON_SOLUTION.md  ANDROID_STANDALONE_ISSUE.md  ANSWERS_TO_CRITICAL_QUESTIONS.md  BACKEND_NOT_RUNNING.md  BUILD_BLOCKER_REPORT.md  CHANGELOG.md  CHECK_BACKEND_STATUS.ps1  CODE_REVIEW_RESPONSE.md  CONSENSUS_SUMMARY.md  DATE_FLOW_AUDIT.md  DESKTOP_TESTING_RESULTS.md  DESKTOP_TESTING_TROUBLESHOOTING.md  DIAGNOSE_ISSUE.md  DIAGNOSIS_CHECKLIST.md  Debuginfo002.md  Dockerfile.android-python  ERROR_ANALYSIS_OBJECTIVES_GENERATION.md  ERROR_AUDIT.md  FINAL_AUTO_PDF_INTEGRATION.py  FIXES_GUIDE.md  FIX_BACKEND_ISSUES.md  FOLDER_DETERMINATION_LOGIC.md  FRESH_START_BROWSER_TESTING.md  FRONTEND_VERSIONS_DOCUMENTATION.md  FUTURE_SESSION_PLAN.md  GEMINI.md  HARD_RESET_BACKEND.bat  IMPLEMENTATION_PRIORITY.md  IPC_BRIDGE_SUCCESS.md  IPC_BRIDGE_TEST_RESULTS.md  (+178 more)
.github/: dependabot.yml
AndroidDoc/: 03_PYTHON_ADAPTATION.md  05_BUILD_DEPLOY.md  (+23 more)
frontend/src-tauri/: Cargo.toml  android-dev-workaround.ps1  apply-android-network-fix.ps1  build-and-install-tablet.ps1  build-tablet.ps1  build.rs  copy_lib.ps1  fix-android-abi.ps1  handle-symlink-error.ps1  post-build-copy.ps1  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/migrations/: 001_users.sql  003_weekly_plans.sql
frontend/src-tauri/src/: bridge.rs  db_commands.rs  lib.rs  main.rs  tmpclaude-5c52-cwd
lesson-plan-browser/frontend/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
lesson-plan-browser/frontend/src-tauri/.cargo/: config.toml
lesson-plan-browser/frontend/src-tauri/migrations/: 002_class_slots.sql  004_schedule_entries.sql  005_lesson_steps.sql  006_lesson_mode_sessions.sql
lesson-plan-browser/frontend/src-tauri/src/: db_commands.rs  lib.rs  main.rs
(+12335 files in other folders)
