[package]
name = "lesson-plan-browser"
version = "1.0.0"
description = "Lesson Plan Browser for Android Tablet"
authors = ["Lesson Planner Team"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "lesson-plan-browser-app"
path = "src/main.rs"

[lib]
name = "lesson_plan_browser"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.30", features = ["bundled", "serde_json"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

